--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
         <header>
-            <img class="heading__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/756881/laptop.svg">
+            <!--img class="heading__img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/756881/laptop.svg"-->
             <h1 class="heading__title">To-Do List</h1>
         </header>
         <form>
